fix(css): change scroll bar from body to html to prevent content shifting when modal appears

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@
   }
 }
 
-body {
+html {
   overflow-y: scroll;
 }
 
